Updated to java 17 and updated the dependencies
- Made changes to some classes for new language features of java 17.
- Upgraded to spring-boot version 2.7.
- Upgraded to java 17.